# LeGM-CP

./: .gitignore  README.md  client.py  pyproject.toml  requirements.txt  server.py
frontend/: package-lock.json  package.json
frontend/src/: client.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/pages/api/: chat.ts
process_utils/: utils_pdf.py
prompts/: MMP_team_building.txt  league_rules.txt
