[project]
name = "LeGM-CP"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.62.0",
    "fastmcp>=2.11.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.3",
    "nba-api>=1.10.0",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.1.1",
]
